fix: added address-link style for all address links, fixed footer flex gap

--- a/styles/content/footer.css
+++ b/styles/content/footer.css
@@ -1,7 +1,7 @@
 .footer {
   padding: 215px 50px 90px;
   display: flex;
-  gap: 355px;
+  gap: 350px;
   justify-content: space-between;
   align-items: start;
   font-size: 18px;
